[package]
name = "esp_idf_logger"
version = "0.1.1"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

description = "A logger that logs with ESP-IDF"
license = "MIT"
homepage = "https://github.com/jeikabu/esp_idf_logger/"
repository = "https://github.com/jeikabu/esp_idf_logger/"
keywords = ["esp-idf", "esp32", "log", "logging"]
categories = ["embedded", "no-std", "development-tools::debugging"]
readme = "README.md"

[features]
default = ["ets_printf"]
ets_printf = []

[dependencies]
log = "0.4"
cty = "0.2"
esp-idf-sys = "0.1.2"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"